update logo and static favicon assets

--- a/views/base.html
+++ b/views/base.html
@@ -1,9 +1,10 @@
 {{ define "up-favicons" }}
-<link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/static/img/favicon-16x16.png">
-<link rel="manifest" href="/static/img/site.webmanifest">
-<link rel="shortcut icon" href="/static/img/favicon.ico">
+<link rel="icon" type="image/png" href="/static/img/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/static/img/favicon.svg" />
+<link rel="shortcut icon" href="/static/img/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon.png" />
+<link rel="manifest" href="/static/img/site.webmanifest" />
+
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="/static/img/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
@@ -14,8 +15,6 @@
 
 {{ define "warn-favicons" }}
 <link rel="apple-touch-icon" sizes="180x180" href="/static/img/warn-apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/static/img/warn-favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/static/img/warn-favicon-16x16.png">
 <link rel="manifest" href="/static/img/site.webmanifest">
 <link rel="shortcut icon" href="/static/img/warn-favicon.ico">
 <meta name="msapplication-TileColor" content="#da532c">
@@ -28,8 +27,6 @@
 
 {{ define "down-favicons" }}
 <link rel="apple-touch-icon" sizes="180x180" href="/static/img/down-apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/static/img/down-favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/static/img/down-favicon-16x16.png">
 <link rel="manifest" href="/static/img/site.webmanifest">
 <link rel="shortcut icon" href="/static/img/down-favicon.ico">
 <meta name="msapplication-TileColor" content="#da532c">
@@ -101,7 +98,7 @@ a {
 						</button>
 						<h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
 								<a href="/">
-										<img src="/static/img/logo.svg" width="110" height="32" alt="outagealert.dev" class="navbar-brand-image">
+										<img src="/static/img/web-app-manifest-512x512.png" width="110" height="32" alt="outagealert.dev" class="navbar-brand-image">
 								</a>
 								outagealert
 						</h1>
