--- a/views/signin.html
+++ b/views/signin.html
@@ -12,15 +12,10 @@
     <script src="/static/js/demo-theme.min.js?1692870487"></script>
 		<div id="form" class="page page-center" hx-swap-oob="true" hx-swap="outerHTML" >
       <div class="container container-tight py-4">
-        <div class="text-center mb-4">
-          <a href="." class="navbar-brand navbar-brand-autodark">
-            <img src="/static/img/logo.svg" width="110" height="32" alt="Tabler" class="navbar-brand-image">
-          </a>
-        </div>
 				{{ template "errors" . }}
         <div class="card card-md">
           <div class="card-body">
-            <h2 class="h2 text-center mb-4">Login to your account</h2>
+            <h2 class="h2 text-center mb-4">Login to outagealert</h2>
             <form hx-post="/api/auth/signin" hx-target="#error-container" hx-swap="innerHTML" autocomplete="off">
               <div class="mb-3">
                 <label class="form-label">Email address</label>
