--- a/views/monitors.html
+++ b/views/monitors.html
@@ -10,6 +10,7 @@
 		<body >
 				<script src="/static/js/demo-theme.min.js?1692870487"></script>
 				{{ template "errors" . }}
+				{{ template "new-modal-report" . }}
 
 				<div class="modal modal-blur fade" id="modal-danger" tabindex="-1" role="dialog" aria-hidden="true">
 						<div class="modal-dialog modal-sm modal-dialog-centered" role="document">
@@ -76,10 +77,9 @@
 												<a href="#" class="btn btn-link link-secondary" data-bs-dismiss="modal">
 														Cancel
 												</a>
-												<button type="submit" class="btn btn-primary ms-auto">
-														<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 5l0 14" /><path d="M5 12l14 0" /></svg>
-														Create new monitor
-														</a>
+						<a href="#" class="btn" data-bs-toggle="modal" data-bs-target="#modal-report">
+								Configure
+						</a>
 										</div>
 								</div>
 						</div>
