--- a/views/refund.html
+++ b/views/refund.html
@@ -14,8 +14,8 @@
 												<h1>
 														Cancellation & Refund Policy
 												</h1>
-												<h3>Ping me if you have any issues or want an refund of a subscription.</h3>
-												<h3>Contact me via email <strong>contact@manosriram.com</strong> to request cancellation.</h3>
+												<h3>Contact via email <strong>contact@manosriram.com</strong> to request refund/cancellation.</h3>
+
 
 												<p>Last updated on 23-11-2024</p>
 										</div>
